# babel-bitcoin-password-decrypter

./: .gitignore  README.md  pyproject.toml
babel_bitcoin_password_decrypter/: __init__.py  babel_lib.py  cli.py  converter.py  syllables.py
